--- a/CS5500Proj_Team10/app/src/main/res/layout/activity_final_user_chat.xml
+++ b/CS5500Proj_Team10/app/src/main/res/layout/activity_final_user_chat.xml
@@ -91,4 +91,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>user
